--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,7 +176,7 @@ body {
 }
 
 .container-fluid, .container {
-  --grid-gutter-x: 30px;
+  --grid-gutter-x: 20px;
   --grid-gutter-y: 0;
   width: 100%;
   margin-left: auto;
@@ -348,52 +348,52 @@ body {
 
 .g-1,
 .gx-1 {
-  --grid-gutter-x: 7.5px;
+  --grid-gutter-x: 5px;
 }
 
 .g-1,
 .gy-1 {
-  --grid-gutter-y: 7.5px;
+  --grid-gutter-y: 5px;
 }
 
 .g-2,
 .gx-2 {
-  --grid-gutter-x: 15px;
+  --grid-gutter-x: 10px;
 }
 
 .g-2,
 .gy-2 {
-  --grid-gutter-y: 15px;
+  --grid-gutter-y: 10px;
 }
 
 .g-3,
 .gx-3 {
-  --grid-gutter-x: 30px;
+  --grid-gutter-x: 20px;
 }
 
 .g-3,
 .gy-3 {
-  --grid-gutter-y: 30px;
+  --grid-gutter-y: 20px;
 }
 
 .g-4,
 .gx-4 {
-  --grid-gutter-x: 45px;
+  --grid-gutter-x: 30px;
 }
 
 .g-4,
 .gy-4 {
-  --grid-gutter-y: 45px;
+  --grid-gutter-y: 30px;
 }
 
 .g-5,
 .gx-5 {
-  --grid-gutter-x: 90px;
+  --grid-gutter-x: 60px;
 }
 
 .g-5,
 .gy-5 {
-  --grid-gutter-y: 90px;
+  --grid-gutter-y: 60px;
 }
 
 @media (min-width: 576px) {
@@ -518,43 +518,43 @@ body {
   }
   .g-sm-1,
   .gx-sm-1 {
-    --grid-gutter-x: 7.5px;
+    --grid-gutter-x: 5px;
   }
   .g-sm-1,
   .gy-sm-1 {
-    --grid-gutter-y: 7.5px;
+    --grid-gutter-y: 5px;
   }
   .g-sm-2,
   .gx-sm-2 {
-    --grid-gutter-x: 15px;
+    --grid-gutter-x: 10px;
   }
   .g-sm-2,
   .gy-sm-2 {
-    --grid-gutter-y: 15px;
+    --grid-gutter-y: 10px;
   }
   .g-sm-3,
   .gx-sm-3 {
-    --grid-gutter-x: 30px;
+    --grid-gutter-x: 20px;
   }
   .g-sm-3,
   .gy-sm-3 {
-    --grid-gutter-y: 30px;
+    --grid-gutter-y: 20px;
   }
   .g-sm-4,
   .gx-sm-4 {
-    --grid-gutter-x: 45px;
+    --grid-gutter-x: 30px;
   }
   .g-sm-4,
   .gy-sm-4 {
-    --grid-gutter-y: 45px;
+    --grid-gutter-y: 30px;
   }
   .g-sm-5,
   .gx-sm-5 {
-    --grid-gutter-x: 90px;
+    --grid-gutter-x: 60px;
   }
   .g-sm-5,
   .gy-sm-5 {
-    --grid-gutter-y: 90px;
+    --grid-gutter-y: 60px;
   }
 }
 @media (min-width: 768px) {
@@ -679,43 +679,43 @@ body {
   }
   .g-md-1,
   .gx-md-1 {
-    --grid-gutter-x: 7.5px;
+    --grid-gutter-x: 5px;
   }
   .g-md-1,
   .gy-md-1 {
-    --grid-gutter-y: 7.5px;
+    --grid-gutter-y: 5px;
   }
   .g-md-2,
   .gx-md-2 {
-    --grid-gutter-x: 15px;
+    --grid-gutter-x: 10px;
   }
   .g-md-2,
   .gy-md-2 {
-    --grid-gutter-y: 15px;
+    --grid-gutter-y: 10px;
   }
   .g-md-3,
   .gx-md-3 {
-    --grid-gutter-x: 30px;
+    --grid-gutter-x: 20px;
   }
   .g-md-3,
   .gy-md-3 {
-    --grid-gutter-y: 30px;
+    --grid-gutter-y: 20px;
   }
   .g-md-4,
   .gx-md-4 {
-    --grid-gutter-x: 45px;
+    --grid-gutter-x: 30px;
   }
   .g-md-4,
   .gy-md-4 {
-    --grid-gutter-y: 45px;
+    --grid-gutter-y: 30px;
   }
   .g-md-5,
   .gx-md-5 {
-    --grid-gutter-x: 90px;
+    --grid-gutter-x: 60px;
   }
   .g-md-5,
   .gy-md-5 {
-    --grid-gutter-y: 90px;
+    --grid-gutter-y: 60px;
   }
 }
 @media (min-width: 992px) {
@@ -840,43 +840,43 @@ body {
   }
   .g-lg-1,
   .gx-lg-1 {
-    --grid-gutter-x: 7.5px;
+    --grid-gutter-x: 5px;
   }
   .g-lg-1,
   .gy-lg-1 {
-    --grid-gutter-y: 7.5px;
+    --grid-gutter-y: 5px;
   }
   .g-lg-2,
   .gx-lg-2 {
-    --grid-gutter-x: 15px;
+    --grid-gutter-x: 10px;
   }
   .g-lg-2,
   .gy-lg-2 {
-    --grid-gutter-y: 15px;
+    --grid-gutter-y: 10px;
   }
   .g-lg-3,
   .gx-lg-3 {
-    --grid-gutter-x: 30px;
+    --grid-gutter-x: 20px;
   }
   .g-lg-3,
   .gy-lg-3 {
-    --grid-gutter-y: 30px;
+    --grid-gutter-y: 20px;
   }
   .g-lg-4,
   .gx-lg-4 {
-    --grid-gutter-x: 45px;
+    --grid-gutter-x: 30px;
   }
   .g-lg-4,
   .gy-lg-4 {
-    --grid-gutter-y: 45px;
+    --grid-gutter-y: 30px;
   }
   .g-lg-5,
   .gx-lg-5 {
-    --grid-gutter-x: 90px;
+    --grid-gutter-x: 60px;
   }
   .g-lg-5,
   .gy-lg-5 {
-    --grid-gutter-y: 90px;
+    --grid-gutter-y: 60px;
   }
 }
 @media (min-width: 1200px) {
@@ -1001,43 +1001,43 @@ body {
   }
   .g-xl-1,
   .gx-xl-1 {
-    --grid-gutter-x: 7.5px;
+    --grid-gutter-x: 5px;
   }
   .g-xl-1,
   .gy-xl-1 {
-    --grid-gutter-y: 7.5px;
+    --grid-gutter-y: 5px;
   }
   .g-xl-2,
   .gx-xl-2 {
-    --grid-gutter-x: 15px;
+    --grid-gutter-x: 10px;
   }
   .g-xl-2,
   .gy-xl-2 {
-    --grid-gutter-y: 15px;
+    --grid-gutter-y: 10px;
   }
   .g-xl-3,
   .gx-xl-3 {
-    --grid-gutter-x: 30px;
+    --grid-gutter-x: 20px;
   }
   .g-xl-3,
   .gy-xl-3 {
-    --grid-gutter-y: 30px;
+    --grid-gutter-y: 20px;
   }
   .g-xl-4,
   .gx-xl-4 {
-    --grid-gutter-x: 45px;
+    --grid-gutter-x: 30px;
   }
   .g-xl-4,
   .gy-xl-4 {
-    --grid-gutter-y: 45px;
+    --grid-gutter-y: 30px;
   }
   .g-xl-5,
   .gx-xl-5 {
-    --grid-gutter-x: 90px;
+    --grid-gutter-x: 60px;
   }
   .g-xl-5,
   .gy-xl-5 {
-    --grid-gutter-y: 90px;
+    --grid-gutter-y: 60px;
   }
 }
 @media (min-width: 1400px) {
@@ -1162,43 +1162,43 @@ body {
   }
   .g-xxl-1,
   .gx-xxl-1 {
-    --grid-gutter-x: 7.5px;
+    --grid-gutter-x: 5px;
   }
   .g-xxl-1,
   .gy-xxl-1 {
-    --grid-gutter-y: 7.5px;
+    --grid-gutter-y: 5px;
   }
   .g-xxl-2,
   .gx-xxl-2 {
-    --grid-gutter-x: 15px;
+    --grid-gutter-x: 10px;
   }
   .g-xxl-2,
   .gy-xxl-2 {
-    --grid-gutter-y: 15px;
+    --grid-gutter-y: 10px;
   }
   .g-xxl-3,
   .gx-xxl-3 {
-    --grid-gutter-x: 30px;
+    --grid-gutter-x: 20px;
   }
   .g-xxl-3,
   .gy-xxl-3 {
-    --grid-gutter-y: 30px;
+    --grid-gutter-y: 20px;
   }
   .g-xxl-4,
   .gx-xxl-4 {
-    --grid-gutter-x: 45px;
+    --grid-gutter-x: 30px;
   }
   .g-xxl-4,
   .gy-xxl-4 {
-    --grid-gutter-y: 45px;
+    --grid-gutter-y: 30px;
   }
   .g-xxl-5,
   .gx-xxl-5 {
-    --grid-gutter-x: 90px;
+    --grid-gutter-x: 60px;
   }
   .g-xxl-5,
   .gy-xxl-5 {
-    --grid-gutter-y: 90px;
+    --grid-gutter-y: 60px;
   }
 }
 html {
@@ -1230,13 +1230,31 @@ html.dark {
   padding: 20px 0;
   background: var(--header-bg-color);
 }
+@media (max-width: 1199.8px) {
+  .header__inner {
+    justify-content: space-between;
+  }
+}
+
 .top-mobileBar {
   display: none;
+}
+@media (max-width: 991.8px) {
+  .top-mobileBar {
+    display: block;
+  }
 }
 
 .navbar {
   margin-left: 130px;
   margin-right: auto;
+}
+@media (max-width: 1199.8px) {
+  .navbar {
+    margin-left: 0;
+    margin-right: 0;
+    display: none;
+  }
 }
 .navbar__link a {
   padding: 5px 15px;
@@ -1289,6 +1307,7 @@ html.dark {
   height: 50px;
   border-radius: 10px;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .logo {
