--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,7 @@
+@use "../abstracts" as ab;
+
+// -----------------------------
+
 %flexLine {
     display: flex;
     align-items: center;
@@ -9,20 +13,37 @@
     padding: 20px 0;
     background: var(--header-bg-color);
 
-    //
+    // -- child
     &__inner {
         @extend %flexLine;
+        @include ab.breakpoint(xl) {
+            justify-content: space-between;
+        }
     }
+
+    // .logo {
+    //     @include ab.breakpoint(lg) {
+    //         display: none;
+    //     }
+    // }
 }
 
 .top-mobileBar {
     display: none;
+    @include ab.breakpoint(lg) {
+        display: block;
+    }
 }
 
 .navbar {
     margin-left: 130px;
     margin-right: auto;
 
+    @include ab.breakpoint(xl) {
+        margin-left: 0;
+        margin-right: 0;
+        display: none;
+    }
     //
     &__list {
         @extend %flexLine;
@@ -46,6 +67,7 @@
 .top-action {
     @extend %flexLine;
     gap: 20px;
+
     //
     &__group {
         @extend %flexLine;
@@ -54,6 +76,7 @@
         border-radius: 8px;
         background: var(--top-action-color);
         box-shadow: var(--top-action-shadow);
+        //
 
         //
         &--single {
@@ -90,5 +113,6 @@
         height: 50px;
         border-radius: 10px;
         object-fit: cover;
+        cursor: pointer;
     }
 }
