--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -6,4 +6,11 @@ html.dark {
     --top-action-color: #292e39;
     --top-action-shadow: 0 20px 60px 10px rgba(0, 0, 0, 0.2);
     --top-separator: #ededf6;
+
+    //  dropdown
+    --dropdown-bg: #292e39;
+    --dropdown-bg-filter: brightness(0) saturate(100%) invert(12%) sepia(5%)
+        saturate(3445%) hue-rotate(184deg) brightness(93%) contrast(82%);
+    --dropdown-shadow: 0 10px 90px 25px rgba(23, 28, 40, 0.4);
+    --drop-menu-hover-text: #0071dc;
 }
