--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -4,6 +4,13 @@ html {
         saturate(857%) hue-rotate(210deg) brightness(89%) contrast(99%);
     --header-bg-color: #eee;
     --top-action-color: white;
-    --top-action-shadow: 0 20px 60px 10px rgba(237, 237, 246, 0.2);
+    --top-action-shadow: 0 20px 60px 10px rgba(237, 237, 246, 0.3);
     --top-separator: #ededf6;
+
+    //  dropdown
+    --dropdown-bg: #ffffff;
+    --dropdown-bg-filter: brightness(0) saturate(100%) invert(100%) sepia(100%)
+        saturate(14%) hue-rotate(212deg) brightness(104%) contrast(104%);
+    --dropdown-shadow: 0 10px 90px 25px rgba(200, 200, 200, 0.4);
+    --drop-menu-hover-text: #0071dc;
 }
