--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -13,4 +13,8 @@ html {
         saturate(14%) hue-rotate(212deg) brightness(104%) contrast(104%);
     --dropdown-shadow: 0 10px 90px 25px rgba(200, 200, 200, 0.4);
     --drop-menu-hover-text: #0071dc;
+    --drop-menu-separator: #d2d1d6;
+    --drop-menu-separator--thumb: rgba(0, 0, 0, 0.3);
 }
+// drop-menu__icon-color
+
