--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -13,4 +13,6 @@ html.dark {
         saturate(3445%) hue-rotate(184deg) brightness(93%) contrast(82%);
     --dropdown-shadow: 0 10px 90px 25px rgba(23, 28, 40, 0.4);
     --drop-menu-hover-text: #0071dc;
+    --drop-menu-separator: #171c28;
+    --drop-menu-separator--thumb: rgba(255, 255, 255, 0.5);
 }
