--- a/scss/themes/_dark.scss
+++ b/scss/themes/_dark.scss
@@ -15,4 +15,5 @@ html.dark {
     --drop-menu-hover-text: #0071dc;
     --drop-menu-separator: #171c28;
     --drop-menu-separator--thumb: rgba(255, 255, 255, 0.5);
+    --drop-menu-text-color : #B9BABE ;
 }
