--- a/scss/themes/_light.scss
+++ b/scss/themes/_light.scss
@@ -15,6 +15,7 @@ html {
     --drop-menu-hover-text: #0071dc;
     --drop-menu-separator: #d2d1d6;
     --drop-menu-separator--thumb: rgba(0, 0, 0, 0.3);
+    --drop-menu-text-color : #1A162E ;
 }
 // drop-menu__icon-color
 
