--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1203,8 +1203,6 @@ body {
 }
 :root {
   --mega-menu-top-space: 40px;
-  --mega-sideMenu-width: 26% ;
-  --mega-menu--height:calc(100vh - 130px);
 }
 
 html {
@@ -1222,6 +1220,7 @@ html {
   --drop-menu-hover-text: #0071dc;
   --drop-menu-separator: #d2d1d6;
   --drop-menu-separator--thumb: rgba(0, 0, 0, 0.3);
+  --drop-menu-text-color: #1A162E ;
 }
 
 html.dark {
@@ -1239,6 +1238,7 @@ html.dark {
   --drop-menu-hover-text: #0071dc;
   --drop-menu-separator: #171c28;
   --drop-menu-separator--thumb: rgba(255, 255, 255, 0.5);
+  --drop-menu-text-color: #B9BABE ;
 }
 
 .top-action__btn, .top-action__group, .top-action, .navbar__link > a, .navbar__list, .header__inner {
@@ -1409,15 +1409,12 @@ html.dark {
 }
 
 .navbar__link:hover .dropdown {
-  visibility: visible;
-  opacity: 1;
+  display: block;
 }
 
 .dropdown {
-  opacity: 0;
-  visibility: hidden;
-  transition: 0.5s;
-  padding-top: var(--mega-menu-top-space);
+  display: none;
+  padding-top: 40px;
   position: absolute;
   z-index: 1;
   top: 100%;
@@ -1425,7 +1422,7 @@ html.dark {
   width: min(100%, 1240px);
 }
 .dropdown__board {
-  height: var(--mega-menu--height);
+  height: calc(100vh - 130px);
   padding: 30px;
   border-radius: 20px;
   background-color: var(--dropdown-bg);
@@ -1434,23 +1431,37 @@ html.dark {
 .dropdown__inner {
   display: flex;
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .drop-menu__side {
-  width: var(--mega-sideMenu-width);
-  padding-right: 25px;
+  width: 24%;
 }
 .drop-menu__main {
   position: absolute;
-  inset: 0 0 0 var(--mega-sideMenu-width);
+  inset: 0 0 0 calc(24% - 5px);
   z-index: 3;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   overflow-y: scroll;
+  padding-left: 30px;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
+}
+.drop-menu__main--single {
+  visibility: visible;
+  opacity: 1;
+  inset: 0 0 0 0;
+  padding-left: 0;
+}
+.drop-menu__item:hover .drop-menu__main {
+  visibility: visible;
+  opacity: 1;
 }
 .drop-menu__column--side {
-  height: calc(var(--mega-menu--height) - 60px);
-  padding-right: 25px;
+  height: calc(100vh - 130px - 60px);
   overflow-y: scroll;
 }
 .drop-menu__column--side::-webkit-scrollbar-track {
@@ -1459,7 +1470,7 @@ html.dark {
 .drop-menu__title {
   gap: 14px;
   margin-bottom: 20px;
-  color: var(--text-color);
+  color: var(--drop-menu-text-color);
   font-weight: 500;
   line-height: 1.5; /* 150% */
 }
@@ -1488,7 +1499,8 @@ html.dark {
 .drop-menu__item {
   display: block;
   width: 100%;
-  color: var(--text-color);
+  padding-right: 25px;
+  color: var(--drop-menu-text-color);
   font-size: 1.4rem;
   line-height: 1.42;
 }
@@ -1498,6 +1510,7 @@ html.dark {
 .drop-menu__item > a {
   display: block;
   width: 100%;
+  height: 100%;
 }
 .drop-menu__item:hover > a {
   color: var(--drop-menu-hover-text);
