--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,5 +1,12 @@
 @use "../abstracts" as ab;
 
+// _______________________________________________
+
+$mega-menu-top-space: 40px;
+$mega-sideMenu-width: 24%;
+$mega-menu--height: calc(100vh - 130px);
+$side-menu-padding-right: 50px;
+$side-menu-scroll-width: 5px;
 // -----------------------------
 
 %flexLine {
@@ -13,7 +20,7 @@
 
 %scroll-costume {
     &::-webkit-scrollbar {
-        width: 5px;
+        width: $side-menu-scroll-width;
     }
     &::-webkit-scrollbar-track {
         background: transparent;
@@ -26,20 +33,19 @@
 }
 
 // -----------------------------
-
 .navbar__link:hover .dropdown {
-    // display: block;
-    visibility: visible;
-    opacity: 1;
+    display: block;
+    // visibility: visible;
+    // opacity: 1;
 }
 
 .dropdown {
-    // display: none;
-    opacity: 0;
-    visibility: hidden;
-    transition: 0.5s;
+    display: none;
+    // opacity: 0;
+    // visibility: hidden;
+    // transition: 0.2s;
     //
-    padding-top: var(--mega-menu-top-space);
+    padding-top: $mega-menu-top-space;
     position: absolute;
     z-index: 1;
     top: 100%;
@@ -47,7 +53,7 @@
     width: min(100%, 1240px);
     //
     &__board {
-        height: var(--mega-menu--height);
+        height: $mega-menu--height;
         padding: 30px;
         border-radius: 20px;
         background-color: var(--dropdown-bg);
@@ -57,32 +63,51 @@
     &__inner {
         display: flex;
         position: relative;
+        width: 100%;
+        height: 100%;
         //
     }
 }
 
 .drop-menu {
     &__side {
-        width: var(--mega-sideMenu-width);
-        padding-right: 25px;
+        width: $mega-sideMenu-width;
 
-        // margin-right: 30px;
     }
 
     &__main {
         position: absolute;
-        inset: 0 0 0 var(--mega-sideMenu-width);
+        inset: 0 0 0 calc($mega-sideMenu-width - $side-menu-scroll-width);
         z-index: 3;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         overflow-y: scroll;
         @extend %scroll-costume;
+        padding-left: calc(
+            $side-menu-padding-right * 0.5 + $side-menu-scroll-width
+        );
+        // display: none;
+        visibility: hidden;
+        opacity: 0;
+        transition: 0.5s;
+        //
+        &--single {
+            visibility: visible;
+            opacity: 1;
+            inset: 0 0 0 0;
+            padding-left: 0;
+        }
+    }
+    &__item:hover &__main {
+        // display: grid;
+        visibility: visible;
+        opacity: 1;
     }
     // _______________________________________________
     &__column {
         &--side {
-            height: calc(var(--mega-menu--height) - 60px);
-            padding-right: 25px;
+            height: calc($mega-menu--height - 60px);
+
             overflow-y: scroll;
             // scrollbar-width: thin;
             @extend %scroll-costume;
@@ -100,7 +125,7 @@
 
         margin-bottom: 20px;
 
-        color: var(--text-color);
+        color: var(--drop-menu-text-color);
         font-weight: 500;
         line-height: 1.5; /* 150% */
         &:not(:first-child) {
@@ -131,8 +156,8 @@
     &__item {
         display: block;
         width: 100%;
-
-        color: var(--text-color);
+        padding-right: calc($side-menu-padding-right * 0.5);
+        color: var(--drop-menu-text-color);
         font-size: 1.4rem;
         line-height: 1.42;
     }
@@ -143,11 +168,11 @@
     &__item > a {
         display: block;
         width: 100%;
+        height: 100%;
     }
     &__item:hover > a {
         color: var(--drop-menu-hover-text);
         text-shadow: 0 0 0.5px var(--drop-menu-hover-text);
     }
-
-    //  _________________________
 }
+//  _________________________
