--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -33,6 +33,7 @@
 
 .top-mobileBar {
     display: none;
+    cursor: pointer;
     @include ab.breakpoint(lg) {
         display: block;
         //
