--- a/templates/header.html
+++ b/templates/header.html
@@ -66,7 +66,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-1.svg"
+                                                    src="./assets/icon/drop-menu-icon-1.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -106,7 +106,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-3.svg"
+                                                                    src="./assets/icon/drop-menu-icon-3.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -227,7 +227,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -290,7 +290,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -374,7 +374,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-5.svg"
+                                                                    src="./assets/icon/drop-menu-icon-5.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -473,7 +473,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-4.svg"
+                                                                    src="./assets/icon/drop-menu-icon-4.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -545,7 +545,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -623,7 +623,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -691,7 +691,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-3.svg"
+                                                                    src="./assets/icon/drop-menu-icon-3.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -813,7 +813,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-4.svg"
+                                                                    src="./assets/icon/drop-menu-icon-4.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -862,7 +862,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-5.svg"
+                                                                    src="./assets/icon/drop-menu-icon-5.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -986,7 +986,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -1049,7 +1049,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -1133,7 +1133,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-4.svg"
+                                                                    src="./assets/icon/drop-menu-icon-4.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -1182,7 +1182,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-5.svg"
+                                                                    src="./assets/icon/drop-menu-icon-5.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -1287,7 +1287,7 @@
                                                                     class="drop-menu__icon-color"
                                                                 />
                                                                 <img
-                                                                    src="../assets/icon/drop-menu-icon-3.svg"
+                                                                    src="./assets/icon/drop-menu-icon-3.svg"
                                                                     alt=" "
                                                                     class="icon-color drop-menu__icon-shape"
                                                                 />
@@ -1431,7 +1431,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-3.svg"
+                                                    src="./assets/icon/drop-menu-icon-3.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1504,7 +1504,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1543,7 +1543,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1592,7 +1592,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-5.svg"
+                                                    src="./assets/icon/drop-menu-icon-5.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1657,7 +1657,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-4.svg"
+                                                    src="./assets/icon/drop-menu-icon-4.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1718,7 +1718,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-4.svg"
+                                                    src="./assets/icon/drop-menu-icon-4.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1751,7 +1751,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1800,7 +1800,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-5.svg"
+                                                    src="./assets/icon/drop-menu-icon-5.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1865,7 +1865,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-2.svg"
+                                                    src="./assets/icon/drop-menu-icon-2.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1908,7 +1908,7 @@
                                                     class="drop-menu__icon-color"
                                                 />
                                                 <img
-                                                    src="../assets/icon/drop-menu-icon-3.svg"
+                                                    src="./assets/icon/drop-menu-icon-3.svg"
                                                     alt=" "
                                                     class="icon-color drop-menu__icon-shape"
                                                 />
@@ -1985,7 +1985,7 @@
             <div class="top-action__group top-action__group--single">
                 <button class="top-action__btn">
                     <img
-                        src="../assets/icon/search.svg"
+                        src="./assets/icon/search.svg"
                         alt=" "
                         class="icon-color top-action__icon"
                     />
@@ -1995,7 +1995,7 @@
             <div class="top-action__group">
                 <button class="top-action__btn">
                     <img
-                        src="../assets/icon/heart.svg"
+                        src="./assets/icon/heart.svg"
                         alt=" "
                         class="icon-color top-action__icon"
                     />
@@ -2004,7 +2004,7 @@
                 <div class="top-action__separator"></div>
                 <button class="top-action__btn">
                     <img
-                        src="../assets/icon/cart.svg"
+                        src="./assets/icon/cart.svg"
                         alt=" "
                         class="icon-color top-action__icon"
                     />
